# Buy-Low-Sell-High

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.request/: BUY_LOW_SELL_HIGH_CODEX_IMPLEMENTATION_PLAN.md  SOXL_MANIA_CODEX_IMPLEMENTATION_PLAN.md  WORKORDER-mentor-reference-matrix.md  supertrend_sweep_dashboard.html
configs/automation/: market_refresh.json
configs/strategies/: 0193t0_best_avg_5x40.yaml  0193t0_default_5x30.yaml  0193t0_default_7x30.yaml  233740_best_avg_5x40.yaml  233740_default_5x30.yaml  233740_default_7x30.yaml  462330_best_avg_5x40.yaml  462330_default_5x30.yaml  462330_default_7x30.yaml  ddeolsao_pal_official_v1.yaml  koru_best_avg_5x40.yaml  koru_default_5x30.yaml  koru_default_7x30.yaml  koru_official_ddeolsao_pal_v1.yaml  mentor_default_5x30.yaml  mentor_default_7x30.yaml  mentor_grid_best_avg_5x40.yaml  mentor_low_vol_7x10.yaml  soxl_best_avg_5x40.yaml  (+8 more)
dashboard/: Dockerfile  package-lock.json  package.json  tsconfig.json
db/: alembic.ini
docs/: _index.md
engine/: Dockerfile
scripts/: backup_restore_test.py  backup_runtime_ledgers.py  check_docker_access.sh  cleanup_dashboard_children.sh  dashboard_exec.sh  dashboard_watchdog.sh  docker_backtest_default.sh  docker_backtest_soxl.sh  docker_init.sh  docker_sync_soxl.sh  docker_sync_symbol.sh  e2e_backtest.sh  e2e_manual.sh  e2e_risk.sh  export_reference_fixture.py  install_dashboard_user_service.sh  lint_docs.py  migrate_to_wsl_server.sh  refresh_market_daily.sh  verify_no_autotrading.py
(+198 files in other folders)
