[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buy-low-sell-high"
version = "0.1.0"
description = "Multi-symbol backtesting research stack"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
buy-low-sell-high = "buy_low_sell_high.cli:main"

[tool.setuptools]
package-dir = {"" = "engine/src"}

[tool.setuptools.packages.find]
where = ["engine/src"]
